--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.13.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
@@ -35,6 +39,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^5.1.1",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "typescript": "^4.2.2"
   }
